Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-21062

Buildbot, Windows - sporadically missing lines from mtr's "exec"

    XMLWordPrintable

Details

    Description

      undeterministic and was seen only on (overloaded) buildbot machines

      Probably yet another bug in Microsoft's popen() implementation

      Example output from buildbot.

      CURRENT_TEST: main.mysqlcheck
      ...
       create view v1 as select * from t1;
       test.t1                                            OK
       test.t1                                            Table is already up to date
      -test.t1                                            OK
       test.t1                                            Table is already up to date
       drop view v1;
       drop table t1;
      
      

      Example2

      CURRENT_TEST: main.mysql_upgrade
      --- D:/winx64-debug/build/src/mysql-test/main/mysql_upgrade.result	2019-11-13 16:08:33.965690200 +0000
      +++ D:\winx64-debug\build\src\mysql-test\main\mysql_upgrade.reject	2019-11-13 16:45:16.505147400 +0000
      @@ -208,36 +208,6 @@
       UPDATE mysql.proc SET collation_connection = NULL WHERE name LIKE 'testproc';
       UPDATE mysql.proc SET db_collation = NULL WHERE name LIKE 'testproc';
       Phase 1/7: Checking and upgrading mysql database
      -Processing databases
      -mysql
      -mysql.column_stats                                 OK
      -mysql.columns_priv                                 OK
      -mysql.db                                           OK
      -mysql.event                                        OK
      -mysql.func                                         OK
      -mysql.global_priv                                  OK
      -mysql.gtid_slave_pos                               OK
      -mysql.help_category                                OK
      -mysql.help_keyword                                 OK
      -mysql.help_relation                                OK
      -mysql.help_topic                                   OK
      -mysql.index_stats                                  OK
      -mysql.innodb_index_stats                           OK
      -mysql.innodb_table_stats                           OK
      -mysql.plugin                                       OK
      -mysql.proc                                         OK
      -mysql.procs_priv                                   OK
      -mysql.proxies_priv                                 OK
      -mysql.roles_mapping                                OK
      -mysql.servers                                      OK
      -mysql.table_stats                                  OK
      -mysql.tables_priv                                  OK
      -mysql.time_zone                                    OK
      -mysql.time_zone_leap_second                        OK
      -mysql.time_zone_name                               OK
      -mysql.time_zone_transition                         OK
      -mysql.time_zone_transition_type                    OK
      -mysql.transaction_registry                         OK
       Phase 2/7: Installing used storage engines... Skipped
       Phase 3/7: Fixing views
       mysql.user                                         OK
      

      Attachments

        Activity

          People

            wlad Vladislav Vaintroub
            wlad Vladislav Vaintroub
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: