MDEV-21062 Buildbot, Windows - sporadically missing lines from mtr's "exec"

Provide own version of popen/pclose, in attempt to workaround
sporadic erratic behavior of UCRT's one.