extra/perror.c
@@ -199,19 +199,22 @@ int get_ER_error_msg(uint code, const char **name_ptr, const char **msg_ptr)
   return 0;
 }
 
-#if defined(__WIN__)
+#if defined(_WIN32)
 static my_bool print_win_error_msg(DWORD error, my_bool verbose)
 {
-  LPTSTR s;
-  if (FormatMessage(FORMAT_MESSAGE_ALLOCATE_BUFFER |
+  char *s;
+  if (FormatMessageA(FORMAT_MESSAGE_ALLOCATE_BUFFER |
                     FORMAT_MESSAGE_FROM_SYSTEM,
-                    NULL, error, 0, (LPTSTR)&s, 0,
+                    NULL, error, 0, (char *)&s, 0,
                     NULL))
   {
+    char* end = s + strlen(s) - 1;
+    while (end > s && (*end == '\r' || *end == '\n'))
+      *end-- = 0;
     if (verbose)
-      printf("Win32 error code %lu: %s", error, s);
+      printf("Win32 error code %lu: %s\n", error, s);
     else
-      puts(s);
+      printf("%s\n",s);
     LocalFree(s);
     return 0;
   }
@@ -259,7 +262,7 @@ int main(int argc,char *argv[])
   const char *msg;
   const char *name;
   char *unknown_error = 0;
-#if defined(__WIN__)
+#if defined(_WIN32)
   my_bool skip_win_message= 0;
 #endif
   MY_INIT(argv[0]);
@@ -350,17 +353,17 @@ int main(int argc,char *argv[])
       }
       if (!found)
       {
-#if defined(__WIN__)
+#if defined(_WIN32)
         if (!(skip_win_message= !print_win_error_msg((DWORD)code, verbose)))
         {
 #endif
           fprintf(stderr,"Illegal error code: %d\n",code);
           error=1;
-#if defined(__WIN__)
+#if defined(_WIN32)
         }
 #endif
       }
-#if defined(__WIN__)
+#if defined(_WIN32)
       if (!skip_win_message)
         print_win_error_msg((DWORD)code, verbose);
 #endif
